--- a/html/about-me.html
+++ b/html/about-me.html
@@ -33,7 +33,14 @@
     </main>
     
     <footer>
-<i class="bi bi-instagram"></i>
+
+<div class="container fs-2">
+    <i class="bi bi-instagram"></i>
+    <i class="bi bi-linkedin"></i>
+    <i class="bi bi-github"></i>
+    <i class="bi bi-telephone-fill"></i>
+</div>
+
 
 
         
