about me toegevoegd

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -11,6 +11,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body class="bg-secondary">
@@ -26,22 +27,120 @@
 
     <main>
 
+      <div class="container-md ">
+        <div class="row">
+          <H2 class="text-decoration-underline p-3 ">About Me</H2>
+        </div>
+      </div>
+      <h4>
+        Mijn naam is Taiyab Hussain ik ben 17 jaar oud en ik volg momenteel de opleiding software developer.
+        Ik kom oorspronkelijk uit pakistan maar heb heel mijn jeugd in England gewoont. Mijn hobbies zijn vooral gamen en naar buiten gaan met vrienden, daarbij 
+      </h4>
 
 
-
-
-    </main>
-    
-    <footer>
-
-<div class="container fs-2">
-    <i class="bi bi-instagram"></i>
-    <i class="bi bi-linkedin"></i>
-    <i class="bi bi-github"></i>
-    <i class="bi bi-telephone-fill"></i>
+<H2 class="text-decoration-underline text-center ">Skills</H2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="html-skill">
+        HTML
+        <div class="bar bg-secondary w-100">
+          <div class="html-progress bg-primary h-100"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="html-skill">
+        Javascript
+        <div class="bar bg-secondary w-100">
+          <div class="javascript-progress bg-primary h-100"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="html-skill">
+        Bootstrap
+        <div class="bar bg-secondary w-100">
+          <div class="bootstrap-progress bg-primary h-100"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="html-skill">
+        NodeJS
+        <div class="bar bg-secondary w-100">
+          <div class="nodejs-progress bg-primary h-100"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="html-skill">
+      Express
+      <div class="bar bg-secondary w-100">
+        <div class="express-progress bg-primary h-100"></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="html-skill">
+      MongoDB
+      <div class="bar bg-secondary w-100">
+        <div class="mongodb-progress bg-primary h-100"></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="html-skill">
+      ChartJS
+      <div class="bar bg-secondary w-100">
+        <div class="chartjs-progress bg-primary h-100"></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
+</div>
+</div>
+    </main>
 
-
+    <footer>
 
         
     </footer>
