about me gewerkt

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -32,11 +32,21 @@
           <H2 class="text-decoration-underline p-3 ">About Me</H2>
         </div>
       </div>
-      <h4>
-        Mijn naam is Taiyab Hussain ik ben 17 jaar oud en ik volg momenteel de opleiding software developer.
-        Ik kom oorspronkelijk uit pakistan maar heb heel mijn jeugd in England gewoont. Mijn hobbies zijn vooral gamen en naar buiten gaan met vrienden, daarbij 
-      </h4>
-
+      
+      <div class="container-md ">
+        <div class="row">
+          <h4>
+            Mijn naam is Taiyab Hussain <br>
+             ik ben 17 jaar oud <br>
+              en ik volg momenteel de opleiding software developer. <br>             
+            Ik kom oorspronkelijk uit pakistan <br>
+             maar heb heel mijn jeugd in England gewoont. <br>
+             Mijn hobbies zijn vooral gamen en naar buiten gaan met vrienden, <br> 
+             daarbij ben ik heel enthousiast over programmeren
+          </h4>
+         
+        </div>
+      </div>
 
 <H2 class="text-decoration-underline text-center ">Skills</H2>
 <div class="container">
