--- a/html/about-me.html
+++ b/html/about-me.html
@@ -44,12 +44,14 @@
              Mijn hobbies zijn vooral gamen en naar buiten gaan met vrienden, <br> 
              daarbij ben ik heel enthousiast over programmeren
           </h4>
+
+
          
         </div>
       </div>
 
-<H2 class="text-decoration-underline text-center ">Skills</H2>
-<div class="container">
+<H2 class="text-decoration-underline text-center  ">Skills</H2>
+<div class="container text-white">
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
@@ -63,7 +65,7 @@
     <div class="col-md-3"></div>
   </div>
 </div>
-<div class="container">
+<div class="container text-white">
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
@@ -77,7 +79,7 @@
     <div class="col-md-3"></div>
   </div>
 </div>
-<div class="container">
+<div class="container text-white">
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
@@ -91,7 +93,7 @@
     <div class="col-md-3"></div>
   </div>
 </div>
-<div class="container">
+<div class="container text-white">
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
@@ -105,8 +107,8 @@
     <div class="col-md-3"></div>
   </div>
 </div>
-</div>
-<div class="container">
+
+<div class="container  text-white">
 <div class="row">
   <div class="col-md-3"></div>
   <div class="col-md-6">
@@ -120,7 +122,7 @@
   <div class="col-md-3"></div>
 </div>
 </div>
-<div class="container">
+<div class="container text-white">
 <div class="row">
   <div class="col-md-3"></div>
   <div class="col-md-6">
@@ -134,7 +136,7 @@
   <div class="col-md-3"></div>
 </div>
 </div>
-<div class="container">
+<div class="container text-white">
 <div class="row">
   <div class="col-md-3"></div>
   <div class="col-md-6">
