projects.html aangewerkt

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -44,11 +44,10 @@
              Mijn hobbies zijn vooral gamen en naar buiten gaan met vrienden, <br> 
              daarbij ben ik heel enthousiast over programmeren
           </h4>
-
-
-         
         </div>
       </div>
+
+      
 
 <H2 class="text-decoration-underline text-center  ">Skills</H2>
 <div class="container text-white">
@@ -58,7 +57,7 @@
       <div class="html-skill">
         HTML
         <div class="bar bg-secondary w-100">
-          <div class="html-progress bg-primary h-100"></div>
+          <div class="html-progress bg-danger h-100"></div>
         </div>
       </div>
     </div>
@@ -71,8 +70,8 @@
     <div class="col-md-6">
       <div class="html-skill">
         Javascript
-        <div class="bar bg-secondary w-100">
-          <div class="javascript-progress bg-primary h-100"></div>
+        <div class="bar bg-wsecondary w-100">
+          <div class="javascript-progress bg-warning h-100"></div>
         </div>
       </div>
     </div>
@@ -86,7 +85,7 @@
       <div class="html-skill">
         Bootstrap
         <div class="bar bg-secondary w-100">
-          <div class="bootstrap-progress bg-primary h-100"></div>
+          <div class="bootstrap-progress bg-light h-100"></div>
         </div>
       </div>
     </div>
@@ -100,7 +99,7 @@
       <div class="html-skill">
         NodeJS
         <div class="bar bg-secondary w-100">
-          <div class="nodejs-progress bg-primary h-100"></div>
+          <div class="nodejs-progress bg-success h-100"></div>
         </div>
       </div>
     </div>
@@ -113,9 +112,9 @@
   <div class="col-md-3"></div>
   <div class="col-md-6">
     <div class="html-skill">
-      Express
+      CSS
       <div class="bar bg-secondary w-100">
-        <div class="express-progress bg-primary h-100"></div>
+        <div class="express-progress bg-info h-100"></div>
       </div>
     </div>
   </div>
@@ -143,7 +142,7 @@
     <div class="html-skill">
       ChartJS
       <div class="bar bg-secondary w-100">
-        <div class="chartjs-progress bg-primary h-100"></div>
+        <div class="chartjs-progress bg-success h-100"></div>
       </div>
     </div>
   </div>
