--- a/html/projects.html
+++ b/html/projects.html
@@ -22,6 +22,7 @@
                     <div class="card-body">
                         <h4 class="card-title">webcatalogus</h4>
                         <p class="card-text">uefa league</p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p03-project-webcatalogus-taiyab" role="button">Button</a>
                     </div>
                 </div>
             </div>
@@ -31,6 +32,7 @@
                     <div class="card-body">
                         <h4 class="card-title">dashboard</h4>
                         <p class="card-text">crypto</p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p04-project-dashboard-lat" role="button">Button</a>
                     </div>
                 </div>
             </div>
@@ -40,6 +42,7 @@
                     <div class="card-body">
                         <h4 class="card-title">escaperoom</h4>
                         <p class="card-text">themaweek</p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p02-escaperoom-saw" role="button">Button</a>
                     </div>
                 </div>
             </div>
@@ -51,6 +54,7 @@
                     <div class="card-body">
                         <h4 class="card-title">hogerlager</h4>
                         <p class="card-text">eerste project</p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p01-project-hoger-lager-T-Hussain01" role="button">Button</a>
                     </div>
                 </div>
             </div>
@@ -60,6 +64,7 @@
                     <div class="card-body">
                         <h4 class="card-title">build-a-game</h4>
                         <p class="card-text">ik had zeeslag</p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p02-project-build-a-game-teammrc" role="button">Button</a>
                     </div>
                 </div>
             </div>
@@ -69,6 +74,7 @@
                     <div class="card-body">
                         <h4 class="card-title">bootstrap mockup</h4>
                         <p class="card-text"></p>
+                        <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd23-p04-html-bootstrap-mockup-b1m-T-Hussain01" role="button">Button</a>
                     </div>
                 </div>
             </div>
